[package]
name = "esp-rf-ook"
version = "0.1.0"
authors = ["Vasily Khoruzhick <anarsoul@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp-rf-ook"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
# WiFi gets broken if optimization is enabled
opt-level = 's'

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
# WiFi gets broken if optimization is enabled
opt-level = 's'

[features]
default = ["std", "embassy", "esp-idf-svc/native"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
anyhow = { version = "1.0.92" }
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
esp-idf-hal = "0.44"
toml-cfg = "0.2"
wifi = { path = "./lib/wifi/" }
embedded-svc = { version = "0.28" }
chrono = { version = "0.4" }

[build-dependencies]
embuild = "0.32.0"
toml-cfg = "0.2"
